# mysql_native_connector

./: .gitignore  .metadata  AGENTS.md  README.md  pubspec.yaml
.cursor/: TODO-amanha.md
.cursor/rules/: dart-gui.mdc  project.mdc  rust-engine.mdc
example/: .gitignore  README.md  build.yaml  geral.ini.example  pubspec.yaml
example/assets/: geral.ini.example
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/lib/models/: app_log_entry.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
integration_test/: simple_test.dart
lib/: main.dart  mysql_native_connector.dart  mysql_native_connector_method_channel.dart  mysql_native_connector_platform_interface.dart
lib/src/: mysql_session.dart
mysql_native_connector_generator/: README.md  build.yaml  pubspec.yaml
mysql_native_connector_generator/lib/: builder.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: database.rs  error.rs  mod.rs  models.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_mysql_native_connector.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_mysql_native_connector.podspec
rust_builder/windows/: CMakeLists.txt
test/: mysql_native_connector_method_channel_test.dart  mysql_native_connector_test.dart  orm_phase1_test.dart
windows/: CMakeLists.txt  mysql_native_connector_plugin.cpp  mysql_native_connector_plugin.h  mysql_native_connector_plugin_c_api.cpp
windows/test/: mysql_native_connector_plugin_test.cpp
(+53 files in other folders)
