[package]
name = "rust_lib_mysql_native_connector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "mysql",
    "chrono",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
